<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="assistant_app_name">Deliveries</string>
    <string name="home_title">我的快递</string>
    <string name="card_settings_express_title">快递动态</string>
    <string name="search_express_hint">查询快递单号</string>
    <string name="widget_status_waiting">待取件</string>
    <string name="widget_status_delivery">派送中</string>
    <string name="widget_status_transit">运输中</string>
    <string name="widget_status_picked">已揽件</string>
    <string name="widget_status_shipped">已发货</string>
    <string name="widget_status_ordered">已下单</string>
    <string name="widget_status_completed">已签收</string>
    <string name="widget_status_danger">异常件</string>
    <string name="widget_status_unknown">暂无状态</string>
    <string name="widget_status_cancelled">已取消</string>
    <string name="widget_active_packages">%1$d 个包裹在路上</string>
    <string name="widget_express_count">我的快递 %1$d</string>
    <string name="widget_express_zero">我的快递 0</string>
    <string name="widget_empty_message">暂无快递</string>
    <string name="widget_all_deliveries">全部快递 %1$d</string>
    <string name="widget_no_logistics_detail">暂无物流动态</string>
    <string name="cancel">取消</string>
    <string name="navigate_back">返回</string>
    <string name="mzuc_delete">删除</string>
    <string name="manage_phone">管理手机号</string>
    <string name="card_sub_bind_tips_title_2">最多可绑定 5 个手机号；绑定后，将自动同步关联的快递信息。</string>
    <string name="card_sub_btn_bind_txt">绑定手机号</string>
    <string name="card_sub_et_hint1">手机号</string>
    <string name="card_sub_et_hint2">验证码</string>
    <string name="card_sub_service_agreement">隐私声明：绑定的手机号仅用于查询快递，不作其他用途。</string>
    <string name="send_code">获取验证码</string>
    <string name="resend_code_countdown">%1$d 秒后重发</string>
    <string name="sending_code">正在发送…</string>
    <string name="network_exception">网络连接异常，请稍后重试</string>
    <string name="query">查询</string>
    <string name="open_detail">查看物流详情</string>
    <string name="logistics_detail">物流详情</string>
    <string name="web_detail_unavailable">暂时无法加载详情</string>
    <string name="express_company_waybill">%1$s：%2$s</string>
    <string name="official_phone">官方电话：</string>
    <string name="bind_phone_title">绑定手机号</string>
    <string name="add_phone">添加手机号</string>
    <string name="delete_express_confirm">要删除此快递吗？</string>
    <string name="delete_express">删除快递</string>
    <string name="unbind_phone">解除绑定</string>
    <string name="no_bound_phone">尚未绑定手机号</string>
    <string name="unbind_phone_confirm">解绑 %1$s 后，其关联的快递也会删除。</string>
    <string name="account_source_switched">已切换至%1$s</string>
    <string name="invalid_waybill">请输入有效的快递单号</string>
    <string name="phone_tail_title">请输入手机尾号</string>
    <string name="phone_tail_message">部分快递需验证手机尾号（如顺丰、中通）</string>
    <string name="phone_tail_invalid">请输入 4 位手机尾号</string>
    <string name="phone_tail_mismatch">手机尾号不正确，请重新输入</string>
    <string name="continue_query">继续查询</string>
    <string name="no_logistics">暂无物流信息</string>
    <string name="loading_logistics">正在加载物流信息</string>
    <string name="manual_query_success">轨迹加载成功</string>
    <string name="manual_querying">正在查询，请稍候</string>
    <string name="manual_query_no_track">暂未获取到可用轨迹</string>
    <string name="manual_query_failure">查询失败，请稍后重试</string>
    <string name="manual_query_timeout">请求超时，请稍后重试</string>
    <string name="manual_query_cancelled">查询已取消，可重新发起</string>
    <string name="invalid_phone">请输入有效的手机号</string>
    <string name="verification_code_required">请输入短信验证码</string>
    <string name="verification_sent">验证码已发送，请注意查收</string>
    <string name="phone_bound">手机号已绑定，快递信息将在稍后自动同步</string>
    <string name="express_retention_notice">只显示 7 天内的快递信息</string>
    <string name="notification_group_important">重要物流节点</string>
    <string name="notification_group_regular">常规物流消息</string>
    <string name="notification_channel_picked">已揽件</string>
    <string name="notification_channel_delivery">派送中</string>
    <string name="notification_channel_waiting_pickup">待取件</string>
    <string name="notification_channel_danger">异常件</string>
    <string name="notification_channel_cancelled">已取消</string>
    <string name="notification_channel_ordered">已下单</string>
    <string name="notification_channel_shipped">已发货</string>
    <string name="notification_channel_transit">运输中</string>
    <string name="notification_channel_completed">已签收</string>
    <string name="notification_channel_description">接收对应快递状态的物流更新</string>
</resources>
